--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ categories = ["os::windows-apis"]
 keywords = ["windows", "ffi", "amsi"]
 license = "MIT"
 readme = "README.md"
+repository = "https://github.com/naim94a/amsi"
 
 [dependencies]
